--- a/index.html
+++ b/index.html
@@ -1,1 +1,379 @@
-"Hello World" 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+
+  <!-- Basic Page Needs
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta charset="utf-8">
+  <title>Andrew Aquino</title>
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <!-- Mobile Specific Metas
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- FONT
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600,800" rel="stylesheet" type="text/css">
+  <link href='http://fonts.googleapis.com/css?family=Merriweather:300italic,300,700,700italic' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Roboto:500,900,700' rel='stylesheet' type='text/css'>
+
+  <!-- CSS
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="stylesheet" href="css/style.css">
+
+  <!-- CSS
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="/js/parallax.js"></script>
+
+  <!-- Favicon
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="icon" type="image/png" href="images/favicon.png">
+
+</head>
+<body>
+  <!-- Header / Landing -->
+  <div class="bg"></div>
+  <header class="section">
+      <div class="container">
+        <div class="row">
+          <div class="twelve columns">
+            <p>AAQUINO.ME</p>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="twelve columns landing">
+            <h1><strong>ANDREW AQUINO</strong></h1>
+            <p>Full-Stack Developer</p>
+          </div>
+        </div>
+      </div>
+  </header>
+  <!-- End {Header / Landing} -->    
+  
+  <!-- About Section -->
+  <div class="section intro">
+    <div class="container">
+      <div class="row">
+        <div class="three  columns about">
+          <div class= "circle-container">
+          <div class="circle user"></div></div>
+          <div class="title">
+          <h4><strong>ABOUT</strong></h4>
+          <div class="header-line left"></div>
+          <h3 class="focus-sub">
+            How does my journey of soul-searching and angst begin?
+          </h3>  
+          </div>
+        </div>
+        <div class="eight offset-by-one columns">
+          <p>Over the years, the prospects of my future adjusted like clockwork. 
+          Never have I ever been resolved in what type of person I desire to 
+          be in 20 years. To me, it is still a mystery even if I roll up my 
+          snuggie sleeves and lament away at my supposed triumphs.
+          </p><p>
+          Unlike my inconsistent aspirations, my fascination towards the digital medium
+          and its effects in improving one's lifestyle never changed. Therefore,
+          with interests business, psychology, and design, I decided to pursue
+          computer science to complete my skillset towards all stages of app development.
+          </p><p>
+          Currently, I endure the harsh winters of Cornell University, drudging
+          through the even harsher engineering curriculum. Despite my stark       
+          indifference towards physics and chemistry, engineering instilled a mentality and 
+          work ethic towards full-stack development.
+          </p><p>
+          Professionally, I operated as a freelance graphic designer since early highschool 
+          and currently serve as an art directon for school organizations; in 
+          addition, I recently completed a six month contract as a UI/UX Dev for a promising 
+          social networking app. On the side, I am a member, choreographer, and e-board 
+          member of a hip hop dance group, Breakfree.
+          </p>
+          <a class="button" href="#">Read More</a>
+          <a class="button" href="#">Resume</a>
+          <a class="button" href="#">Github</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- End {About Section} -->
+
+  <!-- Skills -->
+  <div class = "section skills">
+    <div class="container">
+      <div class="row two-row-std">
+        <div class="three columns module divider">
+            <div class="small-container"><div class="circle"></div></div>
+            <h6><strong>UX/UI</strong></h6>
+            <p>Lorem Ipsum Dolor Amet</p>
+        </div>
+        <div class="three columns module divider">
+            <div class="small-container"><div class="circle"></div></div>
+            <h6><strong>ART DIRECTION</strong></h6>
+            <p>Lorem Ipsum Dolor Amet</p>
+        </div>
+        <div class="three columns module divider two-row-edge">
+            <div class="small-container"><div class="circle"></div></div>
+            <h6><strong>DEVELOPMENT</strong></h6>
+            <p>Lorem Ipsum Dolor Amet</p>
+        </div>
+        <div class="three columns module">
+            <div class="small-container"><div class="circle"></div></div>
+            <h6><strong>MARKETING</strong></h6>
+            <p>Lorem Ipsum Dolor Amet</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- End {Skills Section} -->
+  
+  <!-- Contact Header -->
+  <div class="section agenda">
+    <div class="container">
+      <div class="row">
+        <div class="twelve columns center">
+          <h4><strong>AGENDA</strong></h4>
+          <div class="header-line"></div>
+          <h3>Currently pursuing my dreams at Cornell University
+             Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+              sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
+              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
+              reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur
+          </h3>
+        </div>
+      </div>
+      <div class="full-line"></div>
+     <div class="row agenda-mod weather">
+        <div class="four columns">
+          <h4><strong>WEATHER THREADY</strong></h4>
+          <h3>This project is seeking to change the way we seek
+          information through applications. Weather Thready 
+          skips the analysis and shows what is necessary.
+          </h3>
+        </div>
+      </div>
+       <div class="row agenda-mod mackenzie">
+        <div class="four columns">
+          <h4><strong>RAILS CHALLENGE</strong></h4>
+          <h3>I am joining Mackenzie Child in his tutorial
+          series that recreates some of the most popular
+          backends using Ruby on Rails.
+          </h3>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- End {Contact Header} -->
+
+  <!-- Portfolio -->
+  <div class="section skills">
+    <div class="container">
+      <div class="row">
+        <div class="twelve columns">
+          <h4 style="text-align: center"><strong>PORTFOLIO</strong></h4>
+          <div class="header-line"></div>
+          <h3 style="text-align: center">Lorem Ipsum Dolor Amet</h3>
+        </div>
+      </div>
+    </div>
+  </div>
+    <div class="full-width-container section skills gallery">
+      <div class="row">
+        <ul class="full-width-grid">
+          <li>
+            <a href="#"><img src="images/placeholder.png" /></a>
+            <div class="portfolio-title">
+            <h4><strong>THETA TAU WEBSITE</strong></h4>
+            <h3>Design</h3>
+            </div>
+          </li>
+          <li>
+            <a href="#"><img src="images/placeholder2.png" /></a>
+            <div class="portfolio-title">
+            <h4><strong>FINGER LAKES THERAPY WEBSITE</strong></h4>
+            <h3>Design & Front-end</h3>
+            </div>
+          </li>
+          <li>
+            <a href="#"><img src="images/placeholder3.png" /></a>
+            <div class="portfolio-title">
+            <h4><strong>FRUCKET UX/UI</strong></h4>
+            <h3>Design</h3>
+            </div> 
+          </li>
+          <li>
+            <a href="#"><img src="images/placeholder4.png" /></a>
+            <div class="portfolio-title">
+            <h4><strong>WHEATHER THREADY</strong></h4>
+            <h3>iOS Dev, Design, Marketing</h3>
+            </div>
+          </li>
+          <li>
+            <a href="#"><img src="images/placeholder5.png" /></a>
+            <div class="portfolio-title">
+            <h4><strong>MILLENAILS SHOWCASE</strong></h4>
+            <h3>Art Direction</h3>
+            </div>
+          </li>
+          <li>
+            <a href="#"><img src="images/placeholder6.png" /></a>
+            <div class="portfolio-title">
+            <h4><strong>LOGO DESIGN 2007-2013</strong></h4>
+            <h3>Vector Illustration & Branding</h3>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+  <!-- End {Portfolio Header} -->
+  
+  <div class="section dark">
+    <div class="container">
+      <div class="row left-align">
+        <div class="twelve columns">
+          <h4><strong>I AM AVAILABLE FOR WORK!</strong></h4>
+          <a class="button button-contact button-center" href="#">Contact Me</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <div class="section blog">
+    <div class="container">
+      <div class="row">
+          <div class="twelve columns">
+            <h4 style="text-align: center"><strong>BLOG</strong></h4>
+            <div class="header-line"></div>
+            <h3 style="text-align: center">Lorem Ipsum Dolor Amet</h3>
+          </div>
+        </div>
+    </div>
+  </div>
+  <div class = "section skills">
+    <div class="container">
+      <div class="row">
+        <div class="four columns dark blog-module">
+            " Lorem ipsum Dolor Amet!"
+        </div>
+        <div class="four columns dark blog-module">
+            " Lorem ipsum Dolor Amet!"
+        </div>
+        <div class="four columns blog-module">
+            " Lorem ipsum Dolor Amet!"
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Contact Form -->
+  <div class="section contact">
+    <div class="container">
+      <div class="row">
+        <div class="four columns side-contact">
+           <h4><strong>SAY HI!</strong></h4>
+           <div class="header-line left"></div>
+             <br>
+              <h3>If you would like to assist me in my 100 year battle with my college loan, feel free to start a project with me! Otherwise, feel free to introduce yourself.</h3><br>
+          <h6>e: aja255@cornell.edu<br>t: 1 516 754 4041</h6>
+        </div>
+        <div class="seven offset-by-one columns">
+          <form action="mailto:aja255@cornell.edu">          <!--Contact // Email Form-->
+          <input class="u-full-width" type="text" placeholder="NAME" id="exampleEmailInput"><br>
+          <input class="u-full-width" type="email" placeholder="EMAIL" id="exampleEmailInput"><br><br>
+          <!--Contact // Submit Button-->
+          <textarea class="u-full-width" placeholder="MESSAGE" id="exampleMessage"></textarea><br>
+          <input class="button-primary u-full-width" type="submit" value="SUBMIT">
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- End {Contact Form} -->
+  <!-- Contact Header -->
+ <script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyB22OzX8wLFTwdD9qpzT8KumiyRSjSZZTA&sensor=false&extension=.js'></script> 
+ 
+<script> 
+    google.maps.event.addDomListener(window, 'load', init);
+    var map;
+
+  
+    function init() {
+        var mapOptions = {
+            center: new google.maps.LatLng(42.448277,-76.484229),
+            zoom: 14,
+            zoomControl: false,
+            zoomControlOptions: {
+                style: google.maps.ZoomControlStyle.DEFAULT,
+            },
+            disableDoubleClickZoom: false,
+            mapTypeControl: false,
+            mapTypeControlOptions: {
+                style: google.maps.MapTypeControlStyle.HORIZONTAL_BAR,
+            },
+            scaleControl: false,
+            scrollwheel: false,
+            panControl: false,
+            streetViewControl: false,
+            draggable : true,
+            overviewMapControl: false,
+            overviewMapControlOptions: {
+                opened: false,
+            },
+            mapTypeId: google.maps.MapTypeId.ROADMAP,
+            styles:[{"featureType":"water","elementType":"geometry","stylers":[{"color":"#000000"},{"lightness":16}]},  {"featureType":"landscape","elementType":"geometry","stylers":[{"color":"#000000"},{"lightness":20}]},{"featureType":"road.highway","elementType":"geometry.fill","stylers":[{"color":"#000000"},{"lightness":17}]},{"featureType":"road.highway","elementType":"geometry.stroke","stylers":[{"color":"#000000"},{"lightness":29},{"weight":0.2}]},{"featureType":"road.arterial","elementType":"geometry","stylers":[{"color":"#000000"},{"lightness":18}]},{"featureType":"road.local","elementType":"geometry","stylers":[{"color":"#000000"},{"lightness":13}]},{"featureType":"poi","elementType":"geometry","stylers":[{"color":"#000000"},{"lightness":21}]},{"elementType":"labels.text.stroke","stylers":[{"visibility":"on"},{"color":"#000000"},{"lightness":16}]},{"elementType":"labels.text.fill","stylers":[{"saturation":36},{"color":"#000000"},{"lightness":40}]},{"elementType":"labels.icon","stylers":[{"visibility":"off"}]},{"featureType":"transit","elementType":"geometry","stylers":[{"color":"#000000"},{"lightness":19}]},{"featureType":"administrative","elementType":"geometry.fill","stylers":[{"color":"#000000"},{"lightness":20}]},{"featureType":"administrative","elementType":"geometry.stroke","stylers":[{"color":"#000000"},{"lightness":17},{"weight":1.2}]}],
+        }
+        var mapElement = document.getElementById('school');
+        var map = new google.maps.Map(mapElement, mapOptions);
+        var image = 'images/marker.png';
+        var myLatLng = new google.maps.LatLng(42.448277,-76.484229);
+        var beachMarker = new google.maps.Marker({
+            position: myLatLng,
+            map: map,
+            icon: image
+  });
+
+}
+</script>
+<style>
+    #school {
+        height:400px;
+        width:100%;
+    }
+    .gm-style-iw * {
+        display: block;
+        width: 100%;
+    }
+    .gm-style-iw h4, .gm-style-iw p {
+        margin: 0;
+        padding: 0;
+    }
+    .gm-style-iw a {
+        color: #4272db;
+    }
+</style>
+
+<div id='school'></div>      
+       
+  <!-- End {Contact Header} -->
+
+<footer>
+  <div class="container">
+      <div class="row">
+        <div class="five columns">
+          <p class="footer-text">© 2015 Andrew Aquino. All Rights Reserved.</p>
+        </div>
+        <div class="one column" style="float:right">
+          <p class="footer-text">Logo</p>
+        </div>
+      </div>
+  </div>
+</footer>
+<!-- End Document
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+</body>
+</html>
