--- a/index.html
+++ b/index.html
@@ -108,22 +108,24 @@
     <div class="container">
       <div class="row two-row-std">
         <div class="three columns module divider">
-            <div class="small-container"><div class="circle"></div></div>
+            <div class="small-container"><img src="images/skills-ui.png"/></div>
             <h6><strong>UX/UI</strong></h6>
             <p>Lorem Ipsum Dolor Amet</p>
         </div>
         <div class="three columns module divider">
-            <div class="small-container"><div class="circle"></div></div>
+<div class="small-container"><img src="images/skills-artdir.png"/></div>
             <h6><strong>ART DIRECTION</strong></h6>
             <p>Lorem Ipsum Dolor Amet</p>
         </div>
         <div class="three columns module divider two-row-edge">
-            <div class="small-container"><div class="circle"></div></div>
+            <div class="small-container">
+            <img src="images/skills-dev.png"/>
+            </div>
             <h6><strong>DEVELOPMENT</strong></h6>
             <p>Lorem Ipsum Dolor Amet</p>
         </div>
         <div class="three columns module">
-            <div class="small-container"><div class="circle"></div></div>
+            <div class="small-container"> <img src="images/skills-ui.png"/></div>
             <h6><strong>MARKETING</strong></h6>
             <p>Lorem Ipsum Dolor Amet</p>
         </div>
@@ -228,6 +230,20 @@
             <h3>Vector Illustration & Branding</h3>
             </div>
           </li>
+          <li>
+            <a href="#"><img src="images/placeholder7.png" /></a>
+            <div class="portfolio-title">
+            <h4><strong>GRAPHITE PORTRAITURE</strong></h4>
+            <h3>Fine Arts</h3>
+            </div>
+          </li>
+          <li>
+            <a href="#"><img src="images/placeholder8.png" /></a>
+            <div class="portfolio-title">
+            <h4><strong>PHOTOSTORY 2012-2014</strong></h4>
+            <h3>Photography</h3>
+            </div>
+          </li>
         </ul>
       </div>
     </div>
@@ -244,31 +260,18 @@
     </div>
   </div>
   
-  <div class="section blog">
+  <div class="section skills">
     <div class="container">
       <div class="row">
-          <div class="twelve columns">
-            <h4 style="text-align: center"><strong>BLOG</strong></h4>
-            <div class="header-line"></div>
-            <h3 style="text-align: center">Lorem Ipsum Dolor Amet</h3>
+          <div class="four columns">
+            <h4 style="text-align: left"><strong>BLOG</strong></h4>
+            <div class="header-line left"></div>
+          </div>
+          <div class="eight columns">
+            <h2><strong>SOME PEOPLE ARE JUST NOT ARTISTIC</strong></h2>
           </div>
         </div>
-    </div>
-  </div>
-  <div class = "section skills">
-    <div class="container">
-      <div class="row">
-        <div class="four columns dark blog-module">
-            " Lorem ipsum Dolor Amet!"
-        </div>
-        <div class="four columns dark blog-module">
-            " Lorem ipsum Dolor Amet!"
-        </div>
-        <div class="four columns blog-module">
-            " Lorem ipsum Dolor Amet!"
-        </div>
       </div>
-    </div>
   </div>
   <!-- Contact Form -->
   <div class="section contact">
