--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
   <!-- End {Contact Header} -->
 
   <!-- Portfolio -->
-  <div class="section skills">
+  <div class="section portfolio">
     <div class="container">
       <div class="row">
         <div class="twelve columns">
@@ -185,7 +185,7 @@
       </div>
     </div>
   </div>
-    <div class="full-width-container section skills gallery">
+    <div class="full-width-container section portfolio gallery">
       <div class="row">
         <ul class="full-width-grid">
           <li>
@@ -267,8 +267,14 @@
             <h4 style="text-align: left"><strong>BLOG</strong></h4>
             <div class="header-line left"></div>
           </div>
-          <div class="eight columns">
-            <h2><strong>SOME PEOPLE ARE JUST NOT ARTISTIC</strong></h2>
+          <div class="eight columns" style="text-align:center">
+            <h3 class="blog-title"><strong>Some People are Just Not Artistic</strong>             </h3>
+            <h6 class="blog-sub">January 8, 2014</h6><br>
+              <a class="button" href=#>Read More</a>
+              <br><br><br>
+              <h3 class="blog-title"><strong>Some People are Just Not Artistic</strong>             </h3>
+            <h6 class="blog-sub">January 8, 2014</h6><br>
+              <a class="button" href=#>Read More</a>
           </div>
         </div>
       </div>
