--- a/index.html
+++ b/index.html
@@ -73,28 +73,29 @@
           </div>
         </div>
         <div class="eight offset-by-one columns">
-          <p>Over the years, the prospects of my future adjusted like clockwork. 
-          Never have I ever been resolved in what type of person I desire to 
-          be in 20 years. To me, it is still a mystery even if I roll up my 
-          snuggie sleeves and lament away at my supposed triumphs.
+          <p>Over the years, my future prospects changed like clockwork. 
+          Never have I ever committed to what type of person I would become in twenty years.
+          To this day it still remains a mystery.
           </p><p>
           Unlike my inconsistent aspirations, my fascination towards the digital medium
-          and its effects in improving one's lifestyle never changed. Therefore,
+          never changed. Technology substantially eased even the smallest struggles; I wanted to create
+          this same effect for other people. Therefore,
           with interests business, psychology, and design, I decided to pursue
-          computer science to complete my skillset towards all stages of app development.
+          computer science to secure skills within all of the key stages of app development.
           </p><p>
           Currently, I endure the harsh winters of Cornell University, drudging
           through the even harsher engineering curriculum. Despite my stark       
-          indifference towards physics and chemistry, engineering instilled a mentality and 
-          work ethic towards full-stack development.
+          indifference towards the physical sciences like god-foresaken chemistry, 
+          engineering instilled a mentality and a work ethic to achieve my dreams even furthur.
           </p><p>
-          Professionally, I operated as a freelance graphic designer since early highschool 
-          and currently serve as an art directon for school organizations; in 
+          Outside of academics, I operated as a freelance graphic designer since early highschool 
+          and currently serve as an art director for several school organizations; in 
           addition, I recently completed a six month contract as a UI/UX Dev for a promising 
-          social networking app. On the side, I am a member, choreographer, and e-board 
-          member of a hip hop dance group, Breakfree.
+          social networking app. On my free time, I am a member, choreographer, and e-board 
+          member of, hip hop dance group, Breakfree.
           </p>
-          <a class="button" href="#">Read More</a>
+          <br>
+          <br>
           <a class="button" href="#">Resume</a>
           <a class="button" href="#">Github</a>
         </div>
@@ -249,7 +250,7 @@
     </div>
   <!-- End {Portfolio Header} -->
   
-  <div class="section dark">
+  <div class="section skills">
     <div class="container">
       <div class="row left-align">
         <div class="twelve columns">
@@ -259,7 +260,7 @@
       </div>
     </div>
   </div>
-  
+  <!--
   <div class="section skills">
     <div class="container">
       <div class="row">
@@ -279,7 +280,7 @@
         </div>
       </div>
   </div>
-  <!-- Contact Form -->
+ -->
   <div class="section contact">
     <div class="container">
       <div class="row">
