--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
             scrollwheel: false,
             panControl: false,
             streetViewControl: false,
-            draggable : true,
+            draggable : false,
             overviewMapControl: false,
             overviewMapControlOptions: {
                 opened: false,
