--- a/index.html
+++ b/index.html
@@ -159,6 +159,8 @@
           information through applications. Weather Thready 
           skips the analysis and shows what is necessary.
           </h3>
+          <br>
+           <a class="button" href=#>See Project</a>
         </div>
       </div>
        <div class="row agenda-mod mackenzie">
@@ -168,6 +170,8 @@
           series that recreates some of the most popular
           backends using Ruby on Rails.
           </h3>
+          <br>
+          <a class="button" href=#>Read More</a>
         </div>
       </div>
     </div>
@@ -186,6 +190,8 @@
       </div>
     </div>
   </div>
+   
+   
     <div class="full-width-container section portfolio gallery">
       <div class="row">
         <ul class="full-width-grid">
