--- a/index.html
+++ b/index.html
@@ -247,8 +247,8 @@
           <li>
             <a href="#"><img src="images/placeholder8.png" /></a>
             <div class="portfolio-title">
-            <h4><strong>PHOTOSTORY 2012-2014</strong></h4>
-            <h3>Photography</h3>
+            <h4><strong>GNOMENWALD PROJECT</strong></h4>
+            <h3>Object-Oriented Programming & Swing UI</h3>
             </div>
           </li>
         </ul>
