--- a/index.html
+++ b/index.html
@@ -185,21 +185,25 @@
         <div class="twelve columns">
           <h4 style="text-align: center"><strong>PORTFOLIO</strong></h4>
           <div class="header-line"></div>
-          <h3 style="text-align: center">Lorem Ipsum Dolor Amet</h3>
+          <h3 style="text-align: center">Art Direction | Dev Projects | Marketing</h3>
         </div>
       </div>
     </div>
-  </div>
-   
-   
-    <div class="full-width-container section portfolio gallery">
-      <div class="row">
+    <br><br><br>
+    <div class="container portfolio gallery">
         <ul class="full-width-grid">
           <li>
             <a href="#"><img src="images/placeholder.png" /></a>
             <div class="portfolio-title">
             <h4><strong>THETA TAU WEBSITE</strong></h4>
             <h3>Design</h3>
+            </div>
+          </li>
+         <li>
+            <a href="#"><img src="images/placeholder5.png" /></a>
+            <div class="portfolio-title">
+            <h4><strong>MILLENAILS SHOWCASE</strong></h4>
+            <h3>Art Direction</h3>
             </div>
           </li>
           <li>
@@ -224,10 +228,10 @@
             </div>
           </li>
           <li>
-            <a href="#"><img src="images/placeholder5.png" /></a>
+            <a href="#"><img src="images/placeholder8.png" /></a>
             <div class="portfolio-title">
-            <h4><strong>MILLENAILS SHOWCASE</strong></h4>
-            <h3>Art Direction</h3>
+            <h4><strong>GNOMENWALD PROJECT</strong></h4>
+            <h3>Object-Oriented Programming & Swing UI</h3>
             </div>
           </li>
           <li>
@@ -244,16 +248,10 @@
             <h3>Fine Arts</h3>
             </div>
           </li>
-          <li>
-            <a href="#"><img src="images/placeholder8.png" /></a>
-            <div class="portfolio-title">
-            <h4><strong>GNOMENWALD PROJECT</strong></h4>
-            <h3>Object-Oriented Programming & Swing UI</h3>
-            </div>
-          </li>
         </ul>
       </div>
-    </div>
+        </div>
+   
   <!-- End {Portfolio Header} -->
   
   <div class="section skills">
@@ -264,7 +262,7 @@
           <a class="button button-contact button-center" href="#">Contact Me</a>
         </div>
       </div>
-    </div>
+  </div>
   </div>
   <!--
   <div class="section skills">
