--- a/index.html
+++ b/index.html
@@ -142,12 +142,7 @@
         <div class="twelve columns center">
           <h4><strong>AGENDA</strong></h4>
           <div class="header-line"></div>
-          <h3>Currently pursuing my dreams at Cornell University
-             Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-              sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
-              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
-              reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur
+          <h3>These are the skills I am in the process of improving.
           </h3>
         </div>
       </div>
@@ -162,6 +157,7 @@
           <br>
            <a class="button" href=#>See Project</a>
         </div>
+
       </div>
        <div class="row agenda-mod mackenzie">
         <div class="four columns">
@@ -378,8 +374,22 @@
 <footer>
   <div class="container">
       <div class="row">
+        <div class="three columns">
+          <p>About Me</p>
+          <p>Skills</p>
+          <p>Agenda</p>
+        </div>
+        <div class="three columns">
+          <p>Portfolio</p>
+          <p>Contact</p>
+        </div>
+      </div>
+  </div>
+  <br><br>
+  <div class="container">
+      <div class="row">
         <div class="five columns">
-          <p class="footer-text">© 2015 Andrew Aquino. All Rights Reserved.</p>
+          <h6 class="footer-text">© ANDREW AQUINO 2015</h6>
         </div>
         <div class="one column" style="float:right">
           <p class="footer-text">Logo</p>
