--- a/index.html
+++ b/index.html
@@ -369,8 +369,6 @@
 
 <div id='school'></div>      
        
-  <!-- End {Contact Header} -->
-
 <footer>
   <div class="container">
       <div class="row">
@@ -389,7 +387,7 @@
   <div class="container">
       <div class="row">
         <div class="five columns">
-          <h6 class="footer-text">© ANDREW AQUINO 2015</h6>
+          <h6 class="footer-text">© 2015 | ANDREW AQUINO</h6>
         </div>
         <div class="one column" style="float:right">
           <p class="footer-text">Logo</p>
