--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script src="/js/parallax.js"></script>
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+  <script src="/js/parallax.js"></script>
+  
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/favicon.png">
@@ -37,6 +37,8 @@
 </head>
 <body>
   <!-- Header / Landing -->
+  <div class="main">
+  
   <div class="bg"></div>
   <header class="section">
       <div class="container">
@@ -50,7 +52,7 @@
         <div class="row">
           <div class="twelve columns landing">
             <h1><strong>ANDREW AQUINO</strong></h1>
-            <p>Full-Stack Developer</p>
+            <p>Website Still Under Construction</p>
           </div>
         </div>
       </div>
@@ -134,7 +136,7 @@
     </div>
   </div>
   <!-- End {Skills Section} -->
-  
+ 
   <!-- Contact Header -->
   <div class="section agenda">
     <div class="container">
@@ -281,7 +283,7 @@
       </div>
   </div>
  -->
-  <div class="section contact">
+    <div class="section contact">
     <div class="container">
       <div class="row">
         <div class="four columns side-contact">
@@ -304,7 +306,9 @@
     </div>
   </div>
   <!-- End {Contact Form} -->
-  <!-- Contact Header -->
+ 
+  
+    <!-- Contact Header -->
  <script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyB22OzX8wLFTwdD9qpzT8KumiyRSjSZZTA&sensor=false&extension=.js'></script> 
  
 <script> 
@@ -395,7 +399,11 @@
       </div>
   </div>
 </footer>
-<!-- End Document
+
+ <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+</div>
 </body>
 </html>
+
+
