--- a/index.html
+++ b/index.html
@@ -113,24 +113,25 @@
         <div class="three columns module divider">
             <div class="small-container"><img src="images/skills-ui.png"/></div>
             <h6><strong>UX/UI</strong></h6>
-            <p>Lorem Ipsum Dolor Amet</p>
+            <p>Effecient and beautiful app design</p>
         </div>
         <div class="three columns module divider">
 <div class="small-container"><img src="images/skills-artdir.png"/></div>
-            <h6><strong>ART DIRECTION</strong></h6>
-            <p>Lorem Ipsum Dolor Amet</p>
+            <h6><strong>DEVELOPMENT</strong></h6>
+            <p>Clean and concise engineering</p>
         </div>
         <div class="three columns module divider two-row-edge">
             <div class="small-container">
             <img src="images/skills-dev.png"/>
             </div>
-            <h6><strong>DEVELOPMENT</strong></h6>
-            <p>Lorem Ipsum Dolor Amet</p>
+            <h6><strong>ART DIRECTION</strong></h6>
+            <p>Design industry-level branding</p>
+
         </div>
         <div class="three columns module">
             <div class="small-container"> <img src="images/skills-ui.png"/></div>
             <h6><strong>MARKETING</strong></h6>
-            <p>Lorem Ipsum Dolor Amet</p>
+            <p>Showcase ideas in an elegant way</p>
         </div>
       </div>
     </div>
