fixed some links

--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
           </p>
           <br>
           <br>
-          <a class="button" href="#">Resume</a>
-          <a class="button" href="#">Github</a>
+          <a class="button" href="resume.pdf">Resume</a>
+          <a class="button" href="https://github.com/andjosaquino">Github</a>
         </div>
       </div>
     </div>
@@ -129,7 +129,7 @@
 
         </div>
         <div class="three columns module">
-            <div class="small-container"> <img src="images/skills-ui.png"/></div>
+            <div class="small-container"> <img src="images/skills-marketing.png"/></div>
             <h6><strong>MARKETING</strong></h6>
             <p>Showcase ideas in an elegant way</p>
         </div>
@@ -227,7 +227,7 @@
             </div>
           </li>
           <li>
-            <a href="#"><img src="images/placeholder8.png" /></a>
+            <a href="https://www.behance.net/gallery/17679387/Photorealistic-Portraiture"><img src="images/placeholder8.png" /></a>
             <div class="portfolio-title">
             <h4><strong>GNOMENWALD PROJECT</strong></h4>
             <h3>Object-Oriented Programming & Swing UI</h3>
@@ -241,7 +241,7 @@
             </div>
           </li>
           <li>
-            <a href="#"><img src="images/placeholder7.png" /></a>
+            <a href="https://www.behance.net/gallery/17679387/Photorealistic-Portraiture"><img src="images/placeholder7.png" /></a>
             <div class="portfolio-title">
             <h4><strong>GRAPHITE PORTRAITURE</strong></h4>
             <h3>Fine Arts</h3>
