--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
       <div class="row left-align">
         <div class="twelve columns">
           <h4><strong>I AM AVAILABLE FOR WORK!</strong></h4>
-          <a class="button button-contact button-center" href="#">Contact Me</a>
+          <a class="button button-contact button-center" href="#contact_me">Contact Me</a>
         </div>
       </div>
   </div>
