email fix with brace.io

--- a/index.html
+++ b/index.html
@@ -306,9 +306,9 @@
           <h6>e: aja255@cornell.edu<br>t: 1 516 754 4041</h6>
         </div>
         <div class="seven offset-by-one columns">
-          <form action="mailto:aja255@cornell.edu">          <!--Contact // Email Form-->
+          <form action="http://forms.brace.io/aja255@cornell.edu">          <!--Contact // Email Form-->
           <input class="u-full-width" type="text" placeholder="NAME" id="exampleEmailInput"><br>
-          <input class="u-full-width" type="email" placeholder="EMAIL" id="exampleEmailInput"><br><br>
+          <input class="u-full-width" type="email" placeholder="EMAIL" name="_replyto" id="exampleEmailInput"><br><br>
           <!--Contact // Submit Button-->
           <textarea class="u-full-width" placeholder="MESSAGE" id="exampleMessage"></textarea><br>
           <input class="button-primary u-full-width" type="submit" value="SUBMIT">
