fixed more links

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             </div>
           </li>
           <li>
-            <a href="#"><img src="images/placeholder3.png" /></a>
+            <a href="http://www.frucketapp.com/"><img src="images/placeholder3.png" /></a>
             <div class="portfolio-title">
             <h4><strong>FRUCKET UX/UI</strong></h4>
             <h3>Design</h3>
@@ -237,14 +237,14 @@
             </div>
           </li>
           <li>
-            <a href="https://www.behance.net/gallery/17679387/Photorealistic-Portraiture"><img src="images/placeholder8.png" /></a>
+            <a href="#"><img src="images/placeholder8.png" /></a>
             <div class="portfolio-title">
             <h4><strong>GNOMENWALD PROJECT</strong></h4>
             <h3>Object-Oriented Programming & Swing UI</h3>
             </div>
           </li>
           <li>
-            <a href="#"><img src="images/placeholder6.png" /></a>
+            <a href="https://www.behance.net/gallery/23078929/Logo-Design-2007-2013?"><img src="images/placeholder6.png" /></a>
             <div class="portfolio-title">
             <h4><strong>LOGO DESIGN 2007-2013</strong></h4>
             <h3>Vector Illustration & Branding</h3>
